week three code
