# week3_4/miniBlog/routes/userRoutes.js
@@ -7,4 +7,13 @@ router.get("/users", userControllers.getAllUsers);
 // GET a single user
 router.get("/user/:id", userControllers.getUser);
 
+// Create a new user
+router.post("/user", userControllers.createUser);
+
+// Edit a user
+router.put("/user/:id", userControllers.editUser);
+
+// Delete a user
+router.delete("/user/:id", userControllers.deleteUser);
+
 module.exports = router;
